[package]
name = "chordnovars"
version = "0.1.0"
edition = "2021"
include = ["**/*.rs", "Cargo.toml", "Cargo.lock", "config.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[build-dependencies]


[profile.release]
opt-level = "s"
debug = false
rpath = false
lto = true
debug-assertions = false
incremental = false
panic = 'abort'